# allcallall-agent-runtime

./: .dockerignore  .gitignore  LICENSE  Makefile  README.md  pyproject.toml
contracts/: README.md
docs/: allcallall-integration.md  architecture.md  eval-methodology.md  loop-engineering.md  manual-pilot-ux-sample.md  resume-agent-metrics.md  skill-registry.md  tool-bridge-protocol.md
examples/: docker-compose.yml  (+1 more)
services/agent-runtime/: Dockerfile  README.md  pyproject.toml
services/agent-runtime/allcallall_agent_runtime/: __init__.py  config.py  dag.py  eval_runner.py  harness.py  helpers.py  main.py  metrics.py  models.py  rag_runtime_client.py  retry.py  schemas.py  state.py  synthesis.py  tool_bridge.py
services/agent-runtime/allcallall_agent_runtime/checkpoint/: __init__.py  mysql.py
services/agent-runtime/allcallall_agent_runtime/nodes/: __init__.py  approval.py  context.py  retrieval.py  synthesis.py
services/agent-runtime/allcallall_agent_runtime/prompts/: __init__.py  registry.py
services/agent-runtime/allcallall_agent_runtime/providers/: __init__.py  base.py  openai_compatible.py
services/agent-runtime/allcallall_agent_runtime/tools/: client.py
services/agent-runtime/app/: config.py  dag.py  eval_runner.py  graph.py  grounding.py  helpers.py  llamaindex_adapter.py  main.py  models.py  prompts.py  providers.py  rag_runtime_client.py  retrieval.py  state.py  synthesis.py  tool_bridge.py
services/agent-runtime/app/graphs/: __init__.py  nodes.py  react_agent.py  workflows.py
services/agent-runtime/app/nodes/: __init__.py  approval.py  context.py  retrieval.py  synthesis.py
services/agent-runtime/app/prompts/: registry.py
services/agent-runtime/app/providers/: base.py  openai_compatible.py
services/agent-runtime/app/tools/: __init__.py  client.py
services/agent-runtime/evals/: cases.json
services/agent-runtime/evals/reports/: python-agent-eval.json  python-agent-eval.md
services/agent-runtime/tests/: test_helpers.py  test_intent_routing.py  test_meeting_brief.py  test_mysql_checkpoint.py  test_resilience.py
services/interview-mcp/: Dockerfile  pyproject.toml
services/interview-mcp/allcallall_interview_mcp/: __init__.py  main.py
services/interview-mcp/tests/: test_main.py
services/rag-runtime/: Dockerfile  README.md  pyproject.toml
services/rag-runtime/allcallall_rag_runtime/: config.py  eval_runner.py  go_bridge.py  llamaindex_adapter.py  main.py  models.py  qdrant_adapter.py  retrieval.py
services/rag-runtime/app/: __init__.py  config.py  eval_runner.py  go_bridge.py  main.py  metrics.py  models.py  retrieval.py
services/rag-runtime/evals/: cases.json
services/rag-runtime/evals/reports/: python-rag-eval.json  python-rag-eval.md
services/rag-runtime/tests/: test_rag_runtime.py
services/sandbox-runner/: Dockerfile  pyproject.toml
services/sandbox-runner/allcallall_sandbox_runner/: __init__.py  main.py  mcp_runner.py  metrics.py  models.py  security.py  supervisor_transport.py
services/sandbox-runner/tests/: fake_mcp_child.py  test_main.py  test_security.py  test_supervisor_transport.py
(+14 files in other folders)
