[project]
name = "allcallall-interview-mcp"
version = "0.1.0"
description = "Deterministic HTTPS MCP service used by the AllCallAll interview stack"
requires-python = ">=3.11"
dependencies = [
  "mcp>=1.0.0,<2",
  "uvicorn[standard]>=0.30,<1",
]

[project.optional-dependencies]
dev = ["mypy>=1.10,<2", "pytest>=8.2,<9", "ruff>=0.5,<1"]

[tool.setuptools.packages.find]
include = ["allcallall_interview_mcp*"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.mypy]
python_version = "3.11"
strict = true
