[project]
name = "allcallall-sandbox-runner"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
  "anyio>=4,<5",
  "fastapi>=0.111,<1",
  "httpx>=0.27,<1",
  "mcp>=1.0.0,<2",
  "pydantic>=2.7,<3",
  "uvicorn[standard]>=0.30,<1",
]

[project.optional-dependencies]
dev = ["mypy>=1.10,<2", "pytest>=8.2,<9", "ruff>=0.5,<1"]

[tool.setuptools.packages.find]
include = ["allcallall_sandbox_runner*"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.mypy]
python_version = "3.11"
strict = true
plugins = ["pydantic.mypy"]
